demo/app: fetch a list of blogs from the database

--- a/demo/templates/index.html
+++ b/demo/templates/index.html
@@ -7,7 +7,7 @@
         <h1>Blogs in the blogsphere:</h1>
         <ul>
             {% for blog in blogs %}
-            <li><a href="./blogs/{{ blog.id }}">{{ blog.id }}</a></li>
+            <li><a href="./blogs/{{ blog }}">{{ blog }}</a></li>
             {% endfor %}
         </ul>
 
