--- a/demo/templates/blog.html
+++ b/demo/templates/blog.html
@@ -14,7 +14,7 @@
 
         <form method="post" action="./posts/">
             <label>Post title:</label>
-            <input name="title" type="text">
+            <input name="id" type="text">
             <label>Post body:</label>
             <textarea name="body" rows="10" cols="80">
             </textarea>
